# HPC_labs

lab_3/: CMakeLists.txt  Makefile  main.c  vector.c  vector.h
lab_8/1/: CMakeLists.txt  goblin.cpp  goblin.h  helping_funcs.cpp  helping_funcs.h  knight.cpp  knight.h  mage.cpp  mage.h  main.cpp  player.h
lab_8/1_native/: CMakeLists.txt  game.cpp  game.h  main.cpp  player.cpp
lab_8/1_native/characters/: goblin.h  knight.cpp  knight.h  mage.cpp
lab_8/2_inheritance/: CMakeLists.txt  action.cpp  action.h  game.cpp  game.h  game_controller.cpp  game_controller.h  helping_funcs.cpp  helping_funcs.h  listener.cpp  listener.h  main.cpp  players.cpp  players.h
lab_8/2_inheritance/characters/: goblin.cpp  goblin.h  hero.cpp  hero.h  knight.cpp  knight.h  mage.cpp  mage.h
lab_9/bakers/: CMakeLists.txt  baker.cpp  baker.h  main.cpp  pie.cpp  pie.h
lab_9/garden_beds/: CMakeLists.txt  main.cpp
lab_9/overload/: CMakeLists.txt  funcs.cpp  funcs.h  main.cpp
lab_9/professor/: main.cpp
parallel_lab/1. Greetings/: main.cpp
parallel_lab/2. Threadguarded stack/: CMakeLists.txt  defines.h  main.cpp  threadsave_stack.h
parallel_lab/3. Hierarchical mutex/: CMakeLists.txt  defines.h  hierarchical_mutex.cpp  hierarchical_mutex.hpp  main.cpp  thread_guard.hpp
parallel_lab/4. Shared_mutex/: CMakeLists.txt  defines.h  main.cpp  shared_mutex.cpp  shared_mutex.h  thread_guard.cpp
parallel_lab/5. MPI/: mpi_lab.cpp
parallel_lab/lab1/: CMakeLists.txt  main.cpp
parallel_lab/lab2/: defines.h  (+2 more)
weather/: id  main.cpp  parser.cpp  parser.h  weather.cpp  weather.h  weather.pro
(+5 files in other folders)
